...
    <string name="app_cms_purchase_product_api_url">%1$s/transaction/transaction?store_countryCode=%2$s</string>

    <!-- AppCMS Register Subscription API -->
    <string name="app_cms_menu_icon_name">icon-menu</string>

    <!-- AppCMS Cancel Subscription API -->
    <string name="app_cms_menu_label">Menu</string>

    <!-- AppCMS Get Current Subscription API -->
    <string name="app_cms_live_icon_name">live_</string>

    <!-- AppCMS Validate Google Play Subscription API -->
    <string name="app_cms_home_icon_name">icon-home</string>

    <!-- AppCMS Navigation menu -->
    <string name="app_cms_team_icon_name">teams_</string>
    <string name="app_cms_home_label">Home</string>
    <string name="app_cms_movies_icon_name">icon-movies</string>
    <string name="app_cms_movies_label">Movies</string>
    <string name="app_cms_search_icon_name">icon-search</string>
    <string name="app_cms_search_label">Search</string>
    <string name="app_cms_shows_icon_name">icon-shows</string>
    <string name="app_cms_shows_label">Shows</string>
    <string name="app_cms_teams_label">Teams</string>
    <string name="app_cms_team_label">Team</string>
    <string name="app_cms_getrental_api_url">%1$s/transaction/changeStatus?userId=%2$s&amp;videoId=%3$s</string>
    <string name="app_cms_update_view_start_api_url">%1$s/transaction/changeStatus?userId=%2$s&amp;videoId=%3$s&amp;viewStart=%4$s</string>
    <string name="app_cms_gettransactiondata_api_url">%1$s/transaction/getData?userId=%2$s&amp;contentId=%3$s&amp;type=%4$s&amp;contentMeta=%5$s&amp;site=%6$s</string>
    <string name="app_cms_anonymous_auth_token_api_url">%1$s/identity/anonymous-token?site=%2$s</string>
...

    <string name="content_type_person">PERSON</string>
    <string name="content_type_video">VIDEO</string>
    <string name="content_type_bundle">BUNDLE</string>
    <string name="content_type_series">SERIES</string>
    <string name="media_type_series">SERIES</string>
    <string name="content_type_videos">VIDEOS</string>
    <string name="content_type_show">SHOW</string>

    <string name="content_type_season">SEASON</string>
    <string name="app_cms_module_list_footer_key">footer01</string>
    <string name="app_cms_module_list_tray3_key">tray03</string>
    <string name="thrid_party_login_intent_extra_key">3rdpartylogin</string>
...
