...
        <item quantity="other">%1$d LIKES</item>
    </plurals>
    <string name="_mins_abbreviation">%d MINS</string>
    <string name="color_hash_prefix">#</string>
    <string name="string_with_ellipse">%1$s&#8230;</string>
    <string name="string_with_ellipse_and_more">%1$sMORE</string>
    <string name="more">MORE</string>

    <string name="send_to">Share Video</string>
    <string name="done">DONE</string>
    <string name="preview_ended">Preview ended</string>

    <string name="default_notification_channel_id">com.viewlift.fcm.Notification.CHANNEL_ID</string>
...
